# prumo-assist

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  LICENSE  README.md  RELEASING.md  ROADMAP.md  pyproject.toml  settings.json
.claude/: settings.json
.claude-plugin/: marketplace.json  plugin.json
.claude/rules/: code.md  release.md
.github/schemas/: marketplace.schema.json  plugin.schema.json
.github/scripts/: gen_indexes.py  sync_manifest_version.py  validate_manifests.py
.github/workflows/: ci.yml  validate-manifests.yml
agents/: ml-theory-expert.md  stack-docs-researcher.md
docs/: Research Project Structure.md  _index.md  actions-by-context.md  constitution.md  journey.canvas
docs/.obsidian/: app.json  appearance.json  community-plugins.json  core-plugins.json
docs/adr/: _index.md  adr-0001-adr-log-em-docs-adr.md  adr-0002-skills-e-templates-fora-de-src.md  adr-0003-skill-md-unica-fonte-de-metadata.md  adr-0004-pacote-livre-de-llm.md  adr-0005-layering-core-domains.md  adr-0006-schemas-forward-only.md  adr-0007-zotero-stdlib-urllib.md  adr-0008-layout-alfa-de-notas.md  adr-0009-blocos-delimitados.md  adr-0010-plugin-root-na-raiz.md  adr-0011-semver-por-visibilidade.md  adr-0012-remocao-agents-ml.md  adr-0013-pdf-via-read-nativo.md  adr-0014-findings-canonico.md
docs/canvas/: journey.canvas  project-flow.canvas  project-structure.canvas  zotero-notes-architecture.canvas
docs/superpowers/plans/: 2026-05-03-active-learning-implementation.md  2026-05-03-formulate-picot-implementation.md  2026-05-03-write-family-implementation.md  2026-05-03-zotero-notes-pr-n1-layout-migration.md  2026-05-30-clinical-guidelines-refresh.md  2026-05-30-guideline-staleness-doctor.md  2026-05-30-pj-base-simplification.md  2026-05-30-wiki-lint-deterministic-checks.md  2026-05-30-write-disclosure.md  2026-06-11-repo-organization-redesign.md
docs/superpowers/specs/: 2026-04-29-prumo-scientific-writer-design.md  2026-05-03-active-learning-design.md  2026-05-03-formulate-picot-design.md  2026-05-03-write-family-design.md  (+3 more)
skills/active-learning/: SKILL.md
skills/clinical-metrics/: SKILL.md
skills/data-cleaning/: SKILL.md
skills/formulate-picot/: SKILL.md
skills/paper-extract/: SKILL.md
skills/paper-manager/: SKILL.md
skills/peer-review/: SKILL.md
skills/scientific-writing/: SKILL.md
skills/start/: SKILL.md
skills/tabular-eda/: SKILL.md
skills/wiki-ingest/: SKILL.md
skills/wiki-lint/: SKILL.md
skills/wiki-query/: SKILL.md
skills/write-paper/: SKILL.md
skills/write-projeto-cep/: SKILL.md
skills/write-scientific/: SKILL.md
skills/write-statistics/: SKILL.md
src/prumo_assist/: __init__.py  _version.py  api.py  cli.py
templates/pj_base/: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
templates/pj_base/.claude/: paper_extraction.md  pj_config.toml
templates/pj_base/.claude/rules/: coding_style.md  data_governance.md  documentation.md  project_context.md
templates/pj_base/.obsidian/: app.json  appearance.json  community-plugins.json  core-plugins.json
templates/pj_base/.obsidian/plugins/obsidian-linter/: data.json
templates/pj_base/docs/: README.md  _index.md  _log.md  project_guide.md  protocol.md
templates/pj_base/docs/templates/: README.md  Template submissão Plataforma Brasil.docx  data_dictionary_example.csv  data_dictionary_skeleton.md  statistical_analysis_plan_skeleton.md
templates/pj_base/references/: _index.md  _references.bib
templates/pj_base/references/templates/: literature_note.md
templates/pj_base/references/views/: papers.base
templates/writing/: paper.md  projeto-cep.md  scientific.md  statistics.md
tests/unit/: test_capture_route.py  test_cli_add.py  test_cli_doctor.py  test_cli_init.py  test_config.py  test_csl.py  test_gen_indexes.py  test_guidelines_present.py  test_obsidian.py  test_paper_callout.py  test_paper_graph.py  test_paper_sync.py  test_pj_base_integration.py  test_wiki_lint.py  test_wiki_stats.py  test_write_comments.py
(+132 files in other folders)
